# Win-Diesel

./: .gitignore  README.md  background-simple.js  config.example.json  docker-compose.yml  manifest.json  popup.html  popup.js  test.json  youtube-upload-interceptor.js
affiliate-service/: README_GEMINI.md  go.mod  go.sum  main.go  sample_affiliate_report.csv
affiliate-service/database/: db.go
affiliate-service/globals/: globals.go
affiliate-service/handler/: auth.go  create-custom-affiliate.go  dashboard.go  markdown.go
affiliate-service/models/: report.go  user.go
affiliate-service/redis/: init.go
affiliate-service/service/: csv_processor.go
ai-service/: pyproject.toml  transcript.txt
ai-service/app/: main.py
ai-service/app/api/: __init__.py  router.py
ai-service/app/api/endpoints/: __init__.py  extract.py
ai-service/app/schemas/: __init__.py  extract.py
ai-service/app/services/: __init__.py  agent.py  amazon.py  external_request.py  search_agent.py
chrome-extension/: extension_README.md  manifest.json  options.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
chrome-extension/src/background/: index.ts
chrome-extension/src/content/: index.tsx
chrome-extension/src/lib/: api.ts  devtoDom.ts  linker.ts  mediumDom.ts  twitterDom.ts  youtubeDom.ts  youtubeDomEditor.ts  (+1 more)
linkmint-frontend/: package-lock.json  package.json  tailwind.config.ts
linkmint-frontend/.github/: copilot-instructions.md
linkmint-frontend/app/: globals.css  layout.tsx  page.tsx
linkmint-frontend/lib/: api.ts  auth-context.tsx
(+10 files in other folders)
